--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>react-admin-client</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/qweather-icons@1.1.0/font/qweather-icons.css">
-</head>
-    <body>
-        <div id="root"></div>
-    </body>
-</html>
+<!doctype html><html lang="zh-CN"><head><meta charset="utf-8"/><link rel="shortcut icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><link rel="manifest" href="/manifest.json"/><title>react-admin-client</title><link rel="stylesheet" href="/css/reset.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/qweather-icons@1.1.0/font/qweather-icons.css"><script defer="defer" src="/static/js/main.fe102eaa.js"></script><link href="/static/css/main.24b92840.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
